--- a/csharp/GreeterGrpcServices.csproj
+++ b/csharp/GreeterGrpcServices.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Helloworld.proto" GrpcServices="Server" />
-    <Protobuf Include="albhealthcheck.proto" GrpcServices="Server" />
+    <Protobuf Include="Greeter.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
